<resources>
    <string name="app_name">Bumgard</string>
    <string name="no_connection">No connection</string>
    <string name="no_internet_description">Sorry, no connection was made between your device and the Bumgard.<br/> Try again</string>
    <string name="try_again">Retry</string>
    <string name="app_desc">Vbile technical and engineering solutions</string>
    <string name="app_site">www.vbile.ir</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_setting">Setting</string>
    <string name="skip">skip</string>
    <string name="getStart">Get Start</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="don_t_have_an_account">Don’t Have An Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue_with_your_social_account">continue with your social account</string>
    <string name="or">Or</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_again">Login Again</string>
    <string name="user_email_is_empty">Email could not be empty</string>
    <string name="user_password_is_empty">Password could not be empty</string>
    <string name="user_confirm_password_is_empty">User Confirm Password could not be empty</string>
    <string name="email_format_is_incorrect">Email format is incorrect</string>
    <string name="password_and_password_verification_are_not_the_same">Password And Password Verification Are Not The Same</string>
    <string name="password_must_be_longer_than_6_characters">Password must be longer than 6 characters</string>
    <string name="confirm_password_must_be_longer_than_6_characters">Confirm Password must be longer than 6 characters</string>
    <string name="where_do_you_want_to_go">Where do you want to go?</string>
    <string name="check_in_date">Check-in Date</string>
    <string name="check_out_date">Check-out Date</string>
    <string name="guest">Guest</string>
    <string name="search">Search</string>
    <string name="top_destinations">TOP DESTINATIONS</string>
    <string name="popular_destinations">POPULAR DESTINATIONS</string>
    <string name="search_query_is_empty">search query is empty</string>
    <string name="per_night">per night</string>
    <string name="filter">filter</string>
    <string name="ratings">RATINGS</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="price_range">PRICE RANGE</string>
    <string name="facilities">FACILITIES</string>
    <string name="done">Done</string>
    <string name="hotel_detail">Hotel Detail</string>
    <string name="select_room">Select Room</string>
    <string name="location">Location</string>
    <string name="cleaning">Cleaning</string>
    <string name="service">Service</string>
    <string name="price">Price</string>
    <string name="about">About</string>
    <string name="read_more">read more</string>
    <string name="location_upper_case">LOCATION</string>
    <string name="photos">PHOTOS</string>
    <string name="comments">COMMENTS</string>
    <string name="languages">LANGUAGES</string>
    <string name="hotel_image">hotel image</string>
    <string name="icon_hotel_location">icon hotel location</string>
    <string name="icon_arrow_down">icon arrow down</string>
    <string name="icon_arrow_up">icon arrow up</string>
</resources>