<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/background_color"
            app:title="@string/filter"
            app:titleCentered="true"
            app:titleTextColor="@color/white">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                app:srcCompat="@drawable/ic_cancel" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_search"
        android:fadingEdge="vertical"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.1"
            android:src="@drawable/ic_search" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.9"
            android:background="@android:color/transparent"
            android:hint="@string/where_do_you_want_to_go"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ratings"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/linearL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fadingEdge="vertical"
        android:orientation="horizontal"
        android:gravity="center"
        android:elevation="4dp"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="MissingConstraints">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chips_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:nestedScrollingEnabled="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/CustomChipChoice"                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                app:chipIconSize="16dp"
                app:chipIcon="@drawable/ic_star"
                app:chipIconEnabled="true" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipChoice"                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                app:chipIconSize="16dp"

                app:chipIcon="@drawable/ic_star"
                app:chipIconEnabled="true" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipChoice"                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                app:chipIconSize="16dp"
                app:chipIcon="@drawable/ic_star"
                app:chipIconEnabled="true" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipChoice"                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                app:chipIconSize="16dp"
                app:chipIcon="@drawable/ic_star"
                app:chipIconEnabled="true" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipChoice"                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                app:chipIconSize="16dp"
                app:chipIcon="@drawable/ic_star"
                app:chipIconEnabled="true" />

        </com.google.android.material.chip.ChipGroup>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/price_range"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/linearL"
        app:layout_constraintTop_toBottomOf="@+id/linearL" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="4dp"
        android:fadingEdge="vertical"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:ignore="MissingConstraints">

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rangeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="0.0"
            android:valueTo="300.0"
            app:values="@array/initial_range_slider_values" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/facilities"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:gravity="center"
        tools:itemCount="5"
        tools:listitem="@layout/item_facilities"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="MissingConstraints">


    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>